crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__plan_review_en_160.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=160x30
Carina ▾   ·  carina conversation                                                                                                                 model   Build
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────


                                ╭ Plan review ─────────────────────────────────────────────────────────────────────────────────╮
                                │ Ready for your decision                                                                      │
                                │ Approve implements. Revise drafts comments. Close executes nothing.                          │
                                │ 1 comment                                                                                    │
                                │                                                                                              │
                                │  Plan candidate ──────────────────────────────────────────────────────────────────────────── │
                                │    L1   1. Inspect the session projection boundary and Plan identity.                        │
                                │ ▌  L2 • 2. Preserve comment ownership across a deliberately long terminal line that wraps at │
                                │         eighty columns without changing its logical line anchor.                             │
                                │    L3 • 3. Verify coordinates in no-color and ASCII fallback modes.                          │
                                │    L4   4. Read the relevant protocol and existing tests.                                    │
                                │    L5   5. Update approval requests without bypassing governance.                            │
                                │    L6   6. Run focused tests and the complete quality gates.                                 │
                                │    L7   7. Check the behavior for reopening the current plan.                                │
                                │    L8   8. Preserve any draft that already exists in the composer.                           │
                                │    L9   9. Verify mouse-wheel and keyboard navigation parity.                                │
                                │   L10   10. Check that localized actions remain inside the popup.                            │
                                │   L11   11. Confirm closing the review executes nothing.                                     │
                                │   L12   12. Record the final verification outcome.                                           │
                                │ ──────────────────────────────────────────────────────────────────────────────────────────── │
                                │ [ Approve ] [ Revise ] [ Comment ] [ Close review ]                                          │
                                │                                                                                              │
                                │ A Approve S Revise C Comment M range Q Close Up/Dn J/K Page Home/End                         │
                    ─────────── │                                                                                              │ ───────────
                    ❯ Describe  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
styles:
(0,0)..(9,0) (Reset, Reset, BOLD)
(9,0)..(33,0) (Rgb(150, 160, 156), Reset, NONE)
(145,0)..(152,0) (Rgb(150, 160, 156), Reset, NONE)
(153,0)..(160,0) (Rgb(150, 160, 156), Reset, NONE)
(0,1)..(160,1) (Rgb(52, 65, 68), Reset, NONE)
(32,4)..(128,4) (Rgb(52, 65, 68), Reset, NONE)
(32,5)..(33,5) (Rgb(52, 65, 68), Reset, NONE)
(34,5)..(57,5) (Rgb(142, 219, 210), Reset, BOLD)
(127,5)..(128,5) (Rgb(52, 65, 68), Reset, NONE)
(32,6)..(33,6) (Rgb(52, 65, 68), Reset, NONE)
(34,6)..(101,6) (Rgb(150, 160, 156), Reset, NONE)
(127,6)..(128,6) (Rgb(52, 65, 68), Reset, NONE)
(32,7)..(33,7) (Rgb(52, 65, 68), Reset, NONE)
(34,7)..(43,7) (Rgb(150, 160, 156), Reset, NONE)
(127,7)..(128,7) (Rgb(52, 65, 68), Reset, NONE)
(32,8)..(33,8) (Rgb(52, 65, 68), Reset, NONE)
(127,8)..(128,8) (Rgb(52, 65, 68), Reset, NONE)
(32,9)..(33,9) (Rgb(52, 65, 68), Reset, NONE)
(34,9)..(126,9) (Rgb(52, 65, 68), Reset, NONE)
(127,9)..(128,9) (Rgb(52, 65, 68), Reset, NONE)
(32,10)..(33,10) (Rgb(52, 65, 68), Reset, NONE)
(35,10)..(39,10) (Rgb(150, 160, 156), Reset, NONE)
(127,10)..(128,10) (Rgb(52, 65, 68), Reset, NONE)
(32,11)..(33,11) (Rgb(52, 65, 68), Reset, NONE)
(34,11)..(39,11) (Reset, Rgb(36, 61, 62), BOLD)
(39,11)..(42,11) (Rgb(232, 168, 95), Rgb(36, 61, 62), BOLD)
(42,11)..(126,11) (Reset, Rgb(36, 61, 62), BOLD)
(127,11)..(128,11) (Rgb(52, 65, 68), Reset, NONE)
(32,12)..(33,12) (Rgb(52, 65, 68), Reset, NONE)
(34,12)..(98,12) (Reset, Rgb(36, 61, 62), BOLD)
(127,12)..(128,12) (Rgb(52, 65, 68), Reset, NONE)
(32,13)..(33,13) (Rgb(52, 65, 68), Reset, NONE)
(35,13)..(39,13) (Rgb(150, 160, 156), Reset, NONE)
(39,13)..(42,13) (Rgb(232, 168, 95), Reset, NONE)
(127,13)..(128,13) (Rgb(52, 65, 68), Reset, NONE)
(32,14)..(33,14) (Rgb(52, 65, 68), Reset, NONE)
(35,14)..(39,14) (Rgb(150, 160, 156), Reset, NONE)
(127,14)..(128,14) (Rgb(52, 65, 68), Reset, NONE)
(32,15)..(33,15) (Rgb(52, 65, 68), Reset, NONE)
(35,15)..(39,15) (Rgb(150, 160, 156), Reset, NONE)
(127,15)..(128,15) (Rgb(52, 65, 68), Reset, NONE)
(32,16)..(33,16) (Rgb(52, 65, 68), Reset, NONE)
(35,16)..(39,16) (Rgb(150, 160, 156), Reset, NONE)
(127,16)..(128,16) (Rgb(52, 65, 68), Reset, NONE)
(32,17)..(33,17) (Rgb(52, 65, 68), Reset, NONE)
(35,17)..(39,17) (Rgb(150, 160, 156), Reset, NONE)
(127,17)..(128,17) (Rgb(52, 65, 68), Reset, NONE)
(32,18)..(33,18) (Rgb(52, 65, 68), Reset, NONE)
(35,18)..(39,18) (Rgb(150, 160, 156), Reset, NONE)
(127,18)..(128,18) (Rgb(52, 65, 68), Reset, NONE)
(32,19)..(33,19) (Rgb(52, 65, 68), Reset, NONE)
(35,19)..(39,19) (Rgb(150, 160, 156), Reset, NONE)
(127,19)..(128,19) (Rgb(52, 65, 68), Reset, NONE)
(32,20)..(33,20) (Rgb(52, 65, 68), Reset, NONE)
(35,20)..(39,20) (Rgb(150, 160, 156), Reset, NONE)
(127,20)..(128,20) (Rgb(52, 65, 68), Reset, NONE)
(32,21)..(33,21) (Rgb(52, 65, 68), Reset, NONE)
(35,21)..(39,21) (Rgb(150, 160, 156), Reset, NONE)
(127,21)..(128,21) (Rgb(52, 65, 68), Reset, NONE)
(32,22)..(33,22) (Rgb(52, 65, 68), Reset, NONE)
(35,22)..(39,22) (Rgb(150, 160, 156), Reset, NONE)
(127,22)..(128,22) (Rgb(52, 65, 68), Reset, NONE)
(32,23)..(33,23) (Rgb(52, 65, 68), Reset, NONE)
(34,23)..(126,23) (Rgb(52, 65, 68), Reset, NONE)
(127,23)..(128,23) (Rgb(52, 65, 68), Reset, NONE)
(32,24)..(33,24) (Rgb(52, 65, 68), Reset, NONE)
(34,24)..(45,24) (Rgb(142, 219, 210), Reset, NONE)
(46,24)..(56,24) (Rgb(142, 219, 210), Reset, NONE)
(57,24)..(68,24) (Rgb(142, 219, 210), Reset, NONE)
(69,24)..(85,24) (Rgb(142, 219, 210), Reset, NONE)
(127,24)..(128,24) (Rgb(52, 65, 68), Reset, NONE)
(32,25)..(33,25) (Rgb(52, 65, 68), Reset, NONE)
(127,25)..(128,25) (Rgb(52, 65, 68), Reset, NONE)
(32,26)..(33,26) (Rgb(52, 65, 68), Reset, NONE)
(34,26)..(126,26) (Rgb(150, 160, 156), Reset, NONE)
(127,26)..(128,26) (Rgb(52, 65, 68), Reset, NONE)
(20,27)..(31,27) (Rgb(52, 65, 68), Reset, NONE)
(32,27)..(33,27) (Rgb(52, 65, 68), Reset, NONE)
(34,27)..(126,27) (Rgb(150, 160, 156), Reset, NONE)
(127,27)..(128,27) (Rgb(52, 65, 68), Reset, NONE)
(129,27)..(140,27) (Rgb(52, 65, 68), Reset, NONE)
(20,28)..(31,28) (Rgb(150, 160, 156), Reset, NONE)
(32,28)..(128,28) (Rgb(52, 65, 68), Reset, NONE)
(129,28)..(140,28) (Rgb(150, 160, 156), Reset, NONE)
