crates/carina-tui/src/app/snapshots/carina_tui__app__render__transcript_tests__plan_review_zh_hans_160.snap
---
source: crates/carina-tui/src/app/render.rs
expression: rendered
---
size=160x30
Carina ▾   ·  carina 会话                                                                                                                          model   执行
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────


                                ╭ 审阅计划 ────────────────────────────────────────────────────────────────────────────────────╮
                                │ 等待你的决定                                                                                 │
                                │ 批准会开始实施；修改会把评论放入输入框；关闭不会执行任何操作。                               │
                                │ 1 条评论                                                                                     │
                                │                                                                                              │
                                │  待批准计划 ──────────────────────────────────────────────────────────────────────────────── │
                                │    L1   1. 检查会话投影边界与计划身份。                                                      │
                                │ ▌  L2 • 2. 保持中文批注归属，即使这一条计划内容很长并且在八十列终端中需要自然换行，也不能改  │
                                │         变逻辑行锚点。                                                                       │
                                │    L3 • 3. 验证无颜色和 ASCII 回退时的坐标。                                                 │
                                │    L4   4. 读取相关协议与现有测试。                                                          │
                                │    L5   5. 更新审批请求但不绕过治理。                                                        │
                                │    L6   6. 运行聚焦测试与完整质量门禁。                                                      │
                                │    L7   7. 检查重新打开计划的行为。                                                          │
                                │    L8   8. 保留输入框中已有的草稿。                                                          │
                                │    L9   9. 验证鼠标滚轮和键盘导航一致。                                                      │
                                │   L10   10. 检查多语言按钮不会溢出。                                                         │
                                │   L11   11. 确认关闭审阅不会执行计划。                                                       │
                                │   L12   12. 记录最终验证结果。                                                               │
                                │ ──────────────────────────────────────────────────────────────────────────────────────────── │
                                │ [ 批准 ] [ 修改 ] [ 评论 ] [ 关闭审阅 ]                                                      │
                                │                                                                                              │
                                │ A 批准 S 修改 C 评论 M 范围 Q 关闭 Up/Dn J/K Page Home/End                                   │
                    ─────────── │                                                                                              │ ───────────
                    ❯ 描述你想完╰──────────────────────────────────────────────────────────────────────────────────────────────╯
styles:
(0,0)..(9,0) (Reset, Reset, BOLD)
(9,0)..(25,0) (Rgb(150, 160, 156), Reset, NONE)
(146,0)..(153,0) (Rgb(150, 160, 156), Reset, NONE)
(154,0)..(160,0) (Rgb(150, 160, 156), Reset, NONE)
(0,1)..(160,1) (Rgb(52, 65, 68), Reset, NONE)
(32,4)..(128,4) (Rgb(52, 65, 68), Reset, NONE)
(32,5)..(33,5) (Rgb(52, 65, 68), Reset, NONE)
(34,5)..(46,5) (Rgb(142, 219, 210), Reset, BOLD)
(127,5)..(128,5) (Rgb(52, 65, 68), Reset, NONE)
(32,6)..(33,6) (Rgb(52, 65, 68), Reset, NONE)
(34,6)..(96,6) (Rgb(150, 160, 156), Reset, NONE)
(127,6)..(128,6) (Rgb(52, 65, 68), Reset, NONE)
(32,7)..(33,7) (Rgb(52, 65, 68), Reset, NONE)
(34,7)..(42,7) (Rgb(150, 160, 156), Reset, NONE)
(127,7)..(128,7) (Rgb(52, 65, 68), Reset, NONE)
(32,8)..(33,8) (Rgb(52, 65, 68), Reset, NONE)
(127,8)..(128,8) (Rgb(52, 65, 68), Reset, NONE)
(32,9)..(33,9) (Rgb(52, 65, 68), Reset, NONE)
(34,9)..(126,9) (Rgb(52, 65, 68), Reset, NONE)
(127,9)..(128,9) (Rgb(52, 65, 68), Reset, NONE)
(32,10)..(33,10) (Rgb(52, 65, 68), Reset, NONE)
(35,10)..(39,10) (Rgb(150, 160, 156), Reset, NONE)
(127,10)..(128,10) (Rgb(52, 65, 68), Reset, NONE)
(32,11)..(33,11) (Rgb(52, 65, 68), Reset, NONE)
(34,11)..(39,11) (Reset, Rgb(36, 61, 62), BOLD)
(39,11)..(42,11) (Rgb(232, 168, 95), Rgb(36, 61, 62), BOLD)
(42,11)..(125,11) (Reset, Rgb(36, 61, 62), BOLD)
(127,11)..(128,11) (Rgb(52, 65, 68), Reset, NONE)
(32,12)..(33,12) (Rgb(52, 65, 68), Reset, NONE)
(34,12)..(56,12) (Reset, Rgb(36, 61, 62), BOLD)
(127,12)..(128,12) (Rgb(52, 65, 68), Reset, NONE)
(32,13)..(33,13) (Rgb(52, 65, 68), Reset, NONE)
(35,13)..(39,13) (Rgb(150, 160, 156), Reset, NONE)
(39,13)..(42,13) (Rgb(232, 168, 95), Reset, NONE)
(127,13)..(128,13) (Rgb(52, 65, 68), Reset, NONE)
(32,14)..(33,14) (Rgb(52, 65, 68), Reset, NONE)
(35,14)..(39,14) (Rgb(150, 160, 156), Reset, NONE)
(127,14)..(128,14) (Rgb(52, 65, 68), Reset, NONE)
(32,15)..(33,15) (Rgb(52, 65, 68), Reset, NONE)
(35,15)..(39,15) (Rgb(150, 160, 156), Reset, NONE)
(127,15)..(128,15) (Rgb(52, 65, 68), Reset, NONE)
(32,16)..(33,16) (Rgb(52, 65, 68), Reset, NONE)
(35,16)..(39,16) (Rgb(150, 160, 156), Reset, NONE)
(127,16)..(128,16) (Rgb(52, 65, 68), Reset, NONE)
(32,17)..(33,17) (Rgb(52, 65, 68), Reset, NONE)
(35,17)..(39,17) (Rgb(150, 160, 156), Reset, NONE)
(127,17)..(128,17) (Rgb(52, 65, 68), Reset, NONE)
(32,18)..(33,18) (Rgb(52, 65, 68), Reset, NONE)
(35,18)..(39,18) (Rgb(150, 160, 156), Reset, NONE)
(127,18)..(128,18) (Rgb(52, 65, 68), Reset, NONE)
(32,19)..(33,19) (Rgb(52, 65, 68), Reset, NONE)
(35,19)..(39,19) (Rgb(150, 160, 156), Reset, NONE)
(127,19)..(128,19) (Rgb(52, 65, 68), Reset, NONE)
(32,20)..(33,20) (Rgb(52, 65, 68), Reset, NONE)
(35,20)..(39,20) (Rgb(150, 160, 156), Reset, NONE)
(127,20)..(128,20) (Rgb(52, 65, 68), Reset, NONE)
(32,21)..(33,21) (Rgb(52, 65, 68), Reset, NONE)
(35,21)..(39,21) (Rgb(150, 160, 156), Reset, NONE)
(127,21)..(128,21) (Rgb(52, 65, 68), Reset, NONE)
(32,22)..(33,22) (Rgb(52, 65, 68), Reset, NONE)
(35,22)..(39,22) (Rgb(150, 160, 156), Reset, NONE)
(127,22)..(128,22) (Rgb(52, 65, 68), Reset, NONE)
(32,23)..(33,23) (Rgb(52, 65, 68), Reset, NONE)
(34,23)..(126,23) (Rgb(52, 65, 68), Reset, NONE)
(127,23)..(128,23) (Rgb(52, 65, 68), Reset, NONE)
(32,24)..(33,24) (Rgb(52, 65, 68), Reset, NONE)
(34,24)..(42,24) (Rgb(142, 219, 210), Reset, NONE)
(43,24)..(51,24) (Rgb(142, 219, 210), Reset, NONE)
(52,24)..(60,24) (Rgb(142, 219, 210), Reset, NONE)
(61,24)..(73,24) (Rgb(142, 219, 210), Reset, NONE)
(127,24)..(128,24) (Rgb(52, 65, 68), Reset, NONE)
(32,25)..(33,25) (Rgb(52, 65, 68), Reset, NONE)
(127,25)..(128,25) (Rgb(52, 65, 68), Reset, NONE)
(32,26)..(33,26) (Rgb(52, 65, 68), Reset, NONE)
(34,26)..(126,26) (Rgb(150, 160, 156), Reset, NONE)
(127,26)..(128,26) (Rgb(52, 65, 68), Reset, NONE)
(20,27)..(31,27) (Rgb(52, 65, 68), Reset, NONE)
(32,27)..(33,27) (Rgb(52, 65, 68), Reset, NONE)
(34,27)..(126,27) (Rgb(150, 160, 156), Reset, NONE)
(127,27)..(128,27) (Rgb(52, 65, 68), Reset, NONE)
(129,27)..(140,27) (Rgb(52, 65, 68), Reset, NONE)
(20,28)..(32,28) (Rgb(150, 160, 156), Reset, NONE)
(32,28)..(128,28) (Rgb(52, 65, 68), Reset, NONE)
(129,28)..(140,28) (Rgb(150, 160, 156), Reset, NONE)
